Const-matching in globalshortcut.h - this doesn't seem to be an installed header, otherwise need to change the cpp file instead - would passing QList& be better?

BUG: 194926

svn path=/trunk/KDE/kdebase/runtime/; revision=982426